--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -70,7 +70,7 @@ collections:
     label: "Work"
     folder: "src/pages/work"
     create: true
-    slug: "work/{{slug}}"
+    slug: "work\/{{slug}}"
     fields:
       - {label: "Template Key",name: "templateKey",widget: "hidden",default: "article-page"}
       - {label: "Title",name: "title",widget: "string"}
